# original_gangster

./: .gitignore  Makefile  README.md  combined.md  config.md  go.mod  go.sum  pyproject.toml
agent/: agent.py  emitter.py  log_levels.py  main.py  memory_managed_code_agent.py  prompts.py  proxy_tool.py  session.py
agent/agents/auditor/: agent.py  run_context_script.py  tools.py
agent/agents/executor/: agent.py  create_audited_sessioned_proxy.py  tools.py
agent/agents/planner/: agent.py
agent/common_tools/: tools.py
agent/orchestrator/: agent_orchestrator.py  command_handler.py  initial_plan_handler.py  plan_parser.py
agent/scripts/: show_context.sh
og/: main.go
og/internal/agent/: message_processor.go  process_manager.go
og/internal/config/: config.go
og/internal/history/: history.go
og/internal/session/: session.go
og/internal/ui/: ui.go
og/prompts/: prompts.toml
