[project]
name = "original-gangster"
version = "0.1.0"
description = "A command-line AI companion for terminal work, combining a Go CLI with a Python-based smolagent."
authors = [
  { name = "robbiemu", email = "roberto.tomas.cuentas@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "h5py~=3.13",
  "litellm~=1.71",
  "rich~=14.0",
  "smolagents~=1.16",
  "tenacity~=9.1"
]

[project.scripts]
agent = "agent.main:main"

[tool.setuptools.packages.find]
include = ["agent"]