[project]
name = "original-gangster"
version = "0.1.1"
description = "A command-line AI companion for terminal work, combining a Go CLI with a Python-based smolagent."
authors = [
  { name = "robbiemu", email = "roberto.tomas.cuentas@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "h5py~=3.13",
  "litellm~=1.71",
  "rich~=14.0",
  "smolagents~=1.16",
  "toml~=0.10"
]

[project.optional-dependencies]
dev = ["ruff"]

[project.scripts]
agent = "agent.main:main"

[tool.setuptools.packages.find]
include = ["agent"]
